--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -1,96 +1,58 @@
-/*CSS GLOBAL*/
-
-*{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-}
-
 :root {
-    --dark-blue-background: #051D3B;
-    --blue-editor-background: #6BD1FF;
-    --dark-gray: #141414;
-    --mac-red: #FF5F56;
-    --mac-yellow: #FFBD2E;
-    --mac-green: #27C93F;
-    --blue-active-icon: #5081FB;
+    --branco: #fff;
+    --branco-8: rgba(255, 255, 255, 0.08);
+    --branco-16: rgba(255, 255, 255, 0.16);
+    --branco-24: rgba(255, 255, 255, 0.24);
+    --branco-56: rgba(255, 255, 255, 0.56);
+    --branco-64: rgba(255, 255, 255, 0.64);
+    --branco-72: rgba(255, 255, 255, 0.72);
+
+    --blue-100: #96b9fd;
+    --blue-200: #7ba4fc;
+    --blue-300: #5081fb;
+    --blue-330: #41536a;
+    --blue-350: #2d415b;
+    --blue-400: #051d3b;
+
+    --blue-rgba-100: 150, 185, 253;
+    --blue-rgba-200: 123, 164, 252;
+    --blue-rgba-300: 80, 129, 251;
+    --blue-rgba-400: 5, 29, 59;
+
+    --red: #f65151;
+    --gold-100: #fcb941;
+    --gold-300: #c5881b;
+
+    --mac-red: #ff5f56;
+    --mac-yellow: #ffbd2e;
+    --mac-green: #27c93f;
+
+    --gray-300: #141414;
+    --black-100: #232222;
+    --black-200: #191818;
+    --black-16: rgba(0, 0, 0, 0.16);
+
+    --box-shadow: 0 1rem 1.5rem rgba(0, 0, 0, 0.24);
+    --font-principal: "Inter", sans-serif;
+    --font-secundaria: "Roboto Mono", monospace;
+
+    --border-radius: 0.5rem;
+    --border-pressed: 4px solid;
+
+    --transition-default: 0.2s ease-in-out;
 }
 
-body {
-    background-color: var(--dark-blue-background);
-    font-family: 'Inter', sans-serif;
+body{
+    background-color: var(--blue-400);
+    font-family: var(--font-principal);
+    font-weight: 700;
 }
 
-html {
-    font-size: 100%;
-    font-style: normal;
-    font-weight: 300;
-}
-
-.sr-only {
-    position: absolute;
-    width: 1px;
-    height: 1px;
-    padding: 0;
-    margin:  -1px;
-    overflow: hidden;
-    clip: rect(0, 0, 0, 0);
-    white-space: nowrap;
-    border-width: 0;
-}
-
-.container {
-    margin: 2rem 2rem 0 2rem;
-}
-
-.generic__input {
-    height: 56px;
-    border: none;
-    border-radius: 8px;
-    background-color: rgba(255, 255, 255, 0.16);
-    color: #fff;
-    padding: 0 1rem;
-    outline: none;
-    font-size: 1rem;
-}
-
-.generic__input:hover {
-    background-color: rgba(255, 255, 255, 0.2);
-    border-radius: 8px;
-}
-
-.generic__input::placeholder {
-    color: #fff;
-    opacity: 0.6;
-    line-height: 24px;
-    font-size: 1rem;
-    font-family: 'Inter', sans-serif;
-    font-style: normal;
-    font-weight: 300;
-}
-
-main {
-    display: flex;
-    margin-top: 2.5rem;
-}
-
-.generic__title {
+h2{
     font-size: 0.75rem;
+    font-weight: 400;
+    color: var(--branco);
+    letter-spacing: 0.4rem;
     text-transform: uppercase;
-    letter-spacing: 0.4em;
-    color: #fff;
-    font-family: Inter;
-    font-weight: normal;
-}
-
-@media screen and(max-width: 1023px) {
-    main {
-        flex-direction: column;
-    }
-}
-
-@media screen and(max-width: 767px) {
-    .container {
-        margin: 1.25rem 1rem 0 1rem;
-    }
+    line-height: 1.5;
 }
