--- a/assets/css/reset.css
+++ b/assets/css/reset.css
@@ -1,10 +1,15 @@
-*{
+* {
     padding: 0;
     margin: 0;
     box-sizing: border-box;
 }
-h1, h2, h3,
-h4, h5,h6 {
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
     margin-bottom: 1rem;
 }
 
@@ -12,11 +17,11 @@ ul,li {
     list-style: none;
 }
 
-a{
+a {
     text-decoration: none;
 }
 
-button{
+button {
     background: none;
     border: 0;
 }
